; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dmu.c_dmu_assign_arcbuf_by_dbuf.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dmu.c_dmu_assign_arcbuf_by_dbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dmu_assign_arcbuf_by_dbuf(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32*, i32** %5, align 8
  store i32* %11, i32** %10, align 8
  %12 = load i32*, i32** %10, align 8
  %13 = call i32 @DB_DNODE_ENTER(i32* %12)
  %14 = load i32*, i32** %10, align 8
  %15 = call i32 @DB_DNODE(i32* %14)
  %16 = load i32, i32* %6, align 4
  %17 = load i32*, i32** %7, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @dmu_assign_arcbuf_by_dnode(i32 %15, i32 %16, i32* %17, i32* %18)
  store i32 %19, i32* %9, align 4
  %20 = load i32*, i32** %10, align 8
  %21 = call i32 @DB_DNODE_EXIT(i32* %20)
  %22 = load i32, i32* %9, align 4
  ret i32 %22
}

declare dso_local i32 @DB_DNODE_ENTER(i32*) #1

declare dso_local i32 @dmu_assign_arcbuf_by_dnode(i32, i32, i32*, i32*) #1

declare dso_local i32 @DB_DNODE(i32*) #1

declare dso_local i32 @DB_DNODE_EXIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
